<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/txtreg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:text="@string/registration"
        android:textSize="30dp"
        android:textColor="@color/colorPrimary"/>



    <EditText
        android:id="@+id/etFirstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/lastname"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/email"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/password"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Age"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etgender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Gender"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/etweight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="Weight"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/ettargetweight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:hint="Target Weight" />


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/buttoncolor"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:text="@string/submit"
        android:textColor="@color/colorPrimary" />

</LinearLayout>